# procedural-terrain

./: CMakeLists.txt
imgui/backends/: imgui_impl_glfw.cpp
include/: App.h  Camera.h  GUI.h  Noise.h  Shader.h  Texture.h  World.h
resource/: shader.frag  shader.vert
src/: App.cpp  Camera.cpp  GUI.cpp  Noise.cpp  Shader.cpp  Texture.cpp  World.cpp  main.cpp
